# QMaker

./: CMakeLists.txt  README.md  application.qrc  main.cpp  package-lock.json  package.json  webpack.main.config.js  webpack.rules.js
resources/: stylesheet.qss
src/: index.html  index.ts  renderer.ts
src/scripts/structs/: question-option.struct.ts  question-type.enum.ts  question.struct.ts  questionnaire-theme.struct.ts  questionnaire.struct.ts
src/stylesheets/: _nullstyle.css  _shared.scss  index.scss
widgets/headers/: QuestionContainer.h  QuestionItem.h  QuestionList.h  QuestionListContainer.h  QuestionTypeContainer.h  qmaker.h
widgets/sources/: QuestionContainer.cpp  QuestionItem.cpp  QuestionList.cpp  QuestionListContainer.cpp  QuestionTypeContainer.cpp  qmaker.cpp
